tpview: Option to lock output gesture view to head, instead of tail.
Sometimes it's nice to be zoomed in on the head of the gesture output
and slowly go through the log, but traditionally, the gesture view
would move off the visible area. With this change, there's an option
to keep the view locked to the head. By default it's off, which keeps
current behavior.

BUG=chromium-os:35330
TEST=tested manually. Things seemed good and the few feature works.

Change-Id: Iacb4f297bb8f824000cbd41ff18127bfd16e2a41
Reviewed-on: https://gerrit.chromium.org/gerrit/35587
Reviewed-by: Yufeng Shen <miletus@chromium.org>
Commit-Ready: Andrew de los Reyes <adlr@chromium.org>
Tested-by: Andrew de los Reyes <adlr@chromium.org>

--- a/tpview/view.html
+++ b/tpview/view.html
@@ -281,7 +281,8 @@ $(document).ready(function() {
                        'end': {'xPos': 0.9, 'yPos': 0.5}}]);
   var inGc = new GraphController($('#fview'));
   
-  finger_view_controller = new FingerViewController(inGc, gc, $('#intext'));
+  finger_view_controller = new FingerViewController(inGc, gc, $('#intext'),
+                                                    $('#out-lock-head'));
   $("#out-resetzoom").button({
     icons: {
       primary: "ui-icon-arrow-4-diag"
@@ -397,6 +398,8 @@ $(document).ready(function() {
 <div class="viewspan">
 <div class="heading">Output:</div>
 <canvas class="view" id="gview" width="480" height="320"></canvas><br/>
+<input type="checkbox" id="out-lock-head" />
+<label for="out-lock-head">Lock Head Location</label><br/>
 <button class="button" id="out-resetzoom">Reset Zoom</button><br/>
 </div>
 <div id="playbar">
