Fixes #241, report exceptions in unittest run.
Accumulate exceptions globally and report them in the stats.

BUG=241
R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/10369046

Former-commit-id: a71302df3eacba2a1f3cad77056ebb21d49e9405

--- a/src/tests.html
+++ b/src/tests.html
@@ -88,6 +88,7 @@ found in the LICENSE file.
   <div id="stats">
     <br />
   </div>
+  <ol class="exceptions"></ol>
 
   <div id='individual-tests'>
     <div class="unittest">
