CategoryFilterDialog as HTML template
This moves the CategoryFilterDialog generator out of direct DOM creation
and into an HTML template.

BUG=230
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10289043

Former-commit-id: f239ac8c609696ef4da52f5f7e1eb6110472f9a0

--- a/src/about_tracing.html
+++ b/src/about_tracing.html
@@ -122,6 +122,21 @@ found in the LICENSE file.
     <div class="info-button-text metadata-dialog-text"></div>
   </div>
 </template>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
+
+<template id="view-category-filter-dialog-template">
+  <div class="category-filter-dialog">
+    Select active categories:
+    <form class="category-filter-dialog-form">
+      <div class="categories">
+      </div>
+    </form>
+  </div>
+</template>
 
 <script src="chrome://tracing/tracing.js"></script>
 </head>
