Add disabled-by-default-cc.debug.picture to FrameViewer category.
Former-commit-id: 538b53bf39cb86097741ffcd7fea94f14c8bc9c7

--- a/trace_viewer/extras/about_tracing/record_selection_dialog.html
+++ b/trace_viewer/extras/about_tracing/record_selection_dialog.html
@@ -171,7 +171,8 @@ tv.exportTo('tv.e.about_tracing', function() {
       categoryFilter: ['blink', 'cc', 'gpu', 'v8', 'toplevel']},
     {title: 'Frame Viewer',
       categoryFilter: ['blink', 'cc', 'gpu', 'v8', 'toplevel',
-        'disabled-by-default-cc.debug']},
+        'disabled-by-default-cc.debug',
+        'disabled-by-default-cc.debug.picture']},
     {title: 'Manually select settings',
       categoryFilter: []}
   ];
