Prevent mode switching keyboard shortcuts while typing in find box
This prevents switching when inputting 1, 2, 3 or 4 in the find box.
It'll be useful when functionality is added to navigate to a specific
timestamp within the find box.


Former-commit-id: f393862bc2396403ef003a9fdfd5feb9bb7efacb

--- a/trace_viewer/core/timeline_track_view.html
+++ b/trace_viewer/core/timeline_track_view.html
@@ -202,6 +202,12 @@ tv.exportTo('tv.c', function() {
       this.mouseModeSelector_.setKeyCodeForMode(m.ZOOM, '3'.charCodeAt(0));
       this.mouseModeSelector_.setKeyCodeForMode(m.TIMING, '4'.charCodeAt(0));
 
+      this.mouseModeSelector_.setKeyCodeCondition(function() {
+        // Return false when FindControl is active so that MouseMode keyboard
+        // shortcuts are ignored.
+        return this.listenToKeys_;
+      }.bind(this));
+
       this.mouseModeSelector_.setModifierForAlternateMode(
           m.SELECTION, tv.b.ui.MODIFIER.SHIFT);
       this.mouseModeSelector_.setModifierForAlternateMode(
@@ -301,7 +307,7 @@ tv.exportTo('tv.c', function() {
 
     /**
      * Sets the element whose focus state will determine whether
-     * to respond to keybaord input.
+     * to respond to keyboard input.
      */
     set focusElement(value) {
       this.focusElement_ = value;
@@ -310,7 +316,7 @@ tv.exportTo('tv.c', function() {
     get listenToKeys_() {
       if (!this.viewport_.isAttachedToDocumentOrInTestMode)
         return false;
-      if (this.activeElement instanceof TracingFindControl)
+      if (document.activeElement instanceof TracingFindControl)
         return false;
       if (!this.focusElement_)
         return true;
