--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>
 <a id="how-can-i-try-it" class="anchor" href="#how-can-i-try-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I try it?</h3>
 
-<p>The WebVR API is currently only available in special browser builds provided by the developers, though we hope to make it part of the standard browser distributions eventually. You can get the latest experiemental builds here:</p>
+<p>The WebVR API is currently available in Firefox nightly builds with an Oculus Rift enabler installed, or in experiemental builds of Chrome. You can get the latest WebVR-enabled builds here:</p>
 
 <ul>
 <li><a href="https://drive.google.com/folderview?id=0BzudLt22BqGRbW9WTHMtOWMzNjQ&amp;usp=sharing#list">Chrome</a></li>
