--- a/trace_viewer/core/trace_model/trace_model.html
+++ b/trace_viewer/core/trace_model/trace_model.html
@@ -44,16 +44,45 @@ tv.exportTo('tv.c', function() {
   var Process = tv.c.trace_model.Process;
   var Kernel = tv.c.trace_model.Kernel;
 
+  function ImportOptions() {
+    this.shiftWorldToZero = true;
+    this.pruneEmptyContainers = true;
+
+    // Callback called after
+    // importers run in which more data can be added to the model, before it is
+    // finalized.
+    this.customizeModelCallback = undefined;
+  }
+
+  ImportOptions.fromArguments = function(args, argsStartIndex) {
+    var arg0 = args[argsStartIndex + 0];
+    if (typeof arg0 === 'object') {
+      if (!(arg0 instanceof ImportOptions))
+        throw new Error('Unexpected');
+      return arg0;
+    }
+    var options = new ImportOptions();
+    if (args[argsStartIndex] !== undefined)
+      options.shiftWorldToZero = args[argsStartIndex];
+
+    if (args[argsStartIndex + 1] !== undefined)
+      options.pruneEmptyContainers = args[argsStartIndex + 1];
+
+    if (args[argsStartIndex + 2])
+      options.customizeModelCallback = args[argsStartIndex + 2];
+
+    return options;
+  }
+
   /**
    * Builds a model from an array of TraceEvent objects.
    * @param {Object=} opt_eventData Data from a single trace to be imported into
    *     the new model. See TraceModel.importTraces for details on how to
    *     import multiple traces at once.
-   * @param {bool=} opt_shiftWorldToZero Whether to shift the world to zero.
-   * Defaults to true.
+   * @param {ImportOptions=} opt_options Options for the import.
    * @constructor
    */
-  function TraceModel(opt_eventData, opt_shiftWorldToZero) {
+  function TraceModel(opt_eventData, opt_options) {
     this.kernel = new Kernel(this);
     this.processes = {};
     this.metadata = [];
@@ -72,8 +101,9 @@ tv.exportTo('tv.c', function() {
     this.importWarnings_ = [];
     this.reportedImportWarnings_ = {};
 
+    var options = ImportOptions.fromArguments(arguments, 1);
     if (opt_eventData)
-      this.importTraces([opt_eventData], opt_shiftWorldToZero);
+      this.importTraces([opt_eventData], options);
   }
 
   TraceModel.prototype = {
@@ -246,27 +276,18 @@ tv.exportTo('tv.c', function() {
      * @param {Array} traces An array of eventData to be imported. Each
      * eventData should correspond to a single trace file and will be handled by
      * a separate importer.
-     * @param {bool=} opt_shiftWorldToZero Whether to shift the world to zero.
-     * Defaults to true.
-     * @param {bool=} opt_pruneEmptyContainers Whether to prune empty
-     * containers. Defaults to true.
-     * @param {Function=} opt_customizeModelCallback Callback called after
-     * importers run in which more data can be added to the model, before it is
-     * finalized.
+     * @param {ImportOptions} options Options for the import, or undefined for
+     * default options.
      */
-    importTraces: function(traces,
-                           opt_shiftWorldToZero,
-                           opt_pruneEmptyContainers,
-                           opt_customizeModelCallback) {
+    importTraces: function(traces, opt_options) {
       var progressMeter = {
         update: function(msg) {}
       };
+      var options = ImportOptions.fromArguments(arguments, 1);
       var task = this.createImportTracesTask(
           progressMeter,
           traces,
-          opt_shiftWorldToZero,
-          opt_pruneEmptyContainers,
-          opt_customizeModelCallback);
+          options);
       tv.c.importer.Task.RunSynchronously(task);
     },
 
@@ -275,10 +296,9 @@ tv.exportTo('tv.c', function() {
      * does so using idle callbacks, putting up an import dialog
      * during the import process.
      */
-    importTracesWithProgressDialog: function(traces,
-                                             opt_shiftWorldToZero,
-                                             opt_pruneEmptyContainers,
-                                             opt_customizeModelCallback) {
+    importTracesWithProgressDialog: function(traces, opt_options) {
+      var options = ImportOptions.fromArguments(arguments, 1);
+
       var overlay = tv.b.ui.Overlay();
       overlay.title = 'Importing...';
       overlay.userCanClose = false;
@@ -293,9 +313,7 @@ tv.exportTo('tv.c', function() {
       var task = this.createImportTracesTask(
           overlay,
           traces,
-          opt_shiftWorldToZero,
-          opt_pruneEmptyContainers,
-          opt_customizeModelCallback);
+          options);
       var promise = tv.c.importer.Task.RunWhenIdle(task);
       promise.then(
           function() {
@@ -324,15 +342,11 @@ tv.exportTo('tv.c', function() {
      */
     createImportTracesTask: function(progressMeter,
                                      traces,
-                                     opt_shiftWorldToZero,
-                                     opt_pruneEmptyContainers,
-                                     opt_customizeModelCallback) {
+                                     opt_options) {
+      var options = ImportOptions.fromArguments(arguments, 2);
+
       if (this.importing_)
         throw new Error('Already importing.');
-      if (opt_shiftWorldToZero === undefined)
-        opt_shiftWorldToZero = true;
-      if (opt_pruneEmptyContainers === undefined)
-        opt_pruneEmptyContainers = true;
       this.importing_ = true;
 
       // Just some simple setup. It is useful to have a nop first
@@ -395,9 +409,9 @@ tv.exportTo('tv.c', function() {
       }, this);
 
       // Run the cusomizeModelCallback if needed.
-      if (opt_customizeModelCallback) {
+      if (options.customizeModelCallback) {
         lastTask = lastTask.after(function(task) {
-          opt_customizeModelCallback(this);
+          options.customizeModelCallback(this);
         }, this);
       }
 
@@ -445,7 +459,7 @@ tv.exportTo('tv.c', function() {
       }, this);
 
       // Prune empty containers.
-      if (opt_pruneEmptyContainers) {
+      if (options.pruneEmptyContainers) {
         lastTask = lastTask.after(function() {
           progressMeter.update('Pruning empty containers...');
           this.kernel.pruneEmptyContainers();
@@ -467,7 +481,7 @@ tv.exportTo('tv.c', function() {
         this.updateBounds();
         this.updateCategories_();
 
-        if (opt_shiftWorldToZero)
+        if (options.shiftWorldToZero)
           this.shiftWorldToZero();
       }, this);
 
