Added samples page that embeds the samples index

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 <li><a href="http://mozvr.com/#start">Firefox</a></li>
 </ul>
 
+<p>You can test your browser's support for the WebVR API with these samples:</p>
+
+<ul>
+<li><a href="samples/">WebVR Samples</a></li>
+</ul>
+
 <h3>
 <a id="how-can-i-contribute" class="anchor" href="#how-can-i-contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I contribute?</h3>
 
@@ -75,7 +81,6 @@
 <a id="misc-links" class="anchor" href="#misc-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Misc Links</h3>
 
 <ul>
-<li><a href="https://toji.github.io/webvr-samples">WebVR Samples</a></li>
 <li><a href="http://mozvr.com/">MozVR.com</a></li>
 <li><a href="http://mozvr.com/blog/">MozVR blog</a></li>
 <li><a href="http://blog.bitops.com/">Vlad's blog</a></li>
