--- a/samples/index.html
+++ b/samples/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>WebVR - Experimental Chromium Builds</title>
+    <title>WebVR - Samples</title>
   </head>
 
   <body>
@@ -20,23 +20,13 @@
 
         <header>
           <h1>WebVR</h1>
-          <h2>Experimental Chromium Builds</h2>
+          <h2>Sample Pages</h2>
         </header>
 
         <hr>
 
         <section id="main_content">
-<h3>
-<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use these builds</h3>
-
-<p>WARNING: All builds posted here are experimental! They have not been vetted by Google, me, or anyone else for security or stability, and under no circumstances should you use them as your day-to-day browser! They are provided for testing of the experimental WebVR APIs only.</p>
-
-<p>In order to enable access to the WebVR APIs in these builds you must turn on the "Enable WebVR" flag in <b>about:flags</b> or launch from the command line with <b>--enable-vr</b></p>
-
-<h3>
-<a id="spec" class="anchor" href="#builds" aria-hidden="true"><span class="octicon octicon-link"></span></a>Builds</h3>
-
-<iframe src="https://drive.google.com/embeddedfolderview?id=0BzudLt22BqGRbW9WTHMtOWMzNjQ#list" style="width:100%; height:600px; border:0;"></iframe>
+<iframe src="https://toji.github.io/webvr-samples" style="width:100%; height:600px; border:0;"></iframe>
         </section>
 
         <footer>
