Linked to the WebVR polyfill
Because HOLY CRAP, why aren't we linking to it already?!?

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 <li><a href="http://mozvr.com/#start">Firefox</a></li>
 </ul>
 
+<p>Or, if you want to add WebVR to your mobile site today, you can use the WebVR Polyfill to provide support for Cardboard devices.</p>
+
+<ul>
+<li><a href="https://github.com/borismus/webvr-polyfill">WebVR Polyfill</a></li>
+</ul>
+
 <p>You can test your browser's support for the WebVR API with these samples:</p>
 
 <ul>
