--- a/samples/index.html
+++ b/samples/index.html
@@ -26,7 +26,7 @@
         <hr>
 
         <section id="main_content">
-<iframe src="https://toji.github.io/webvr-samples" style="width:100%; height:600px; border:0;"></iframe>
+<iframe src="https://toji.github.io/webvr-samples/" style="width:100%; height:600px; border:0;"></iframe>
         </section>
 
         <footer>
