Adding Twitter card metadata

--- a/samples/index.html
+++ b/samples/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="WebVR Samples">
+    <meta name="twitter:description" content="Sample WebVR pages for testing and reference">
+    <meta name="twitter:image" content="https://webvr.info/images/webvr-logo.png">
+
     <link href="https://fonts.googleapis.com/css?family=Chivo:900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/pygment_trac.css" media="screen">
