--- a/get-chrome/index.html
+++ b/get-chrome/index.html
@@ -8,7 +8,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="WebVR Chrome Downloads">
     <meta name="twitter:description" content="Experimental Chrome builds to develop WebVR content against">
-    <meta name="twitter:image" content="https://webvr.info/images/webvr-logo.png">
+    <meta name="twitter:image" content="https://webvr.info/images/webvr-logo-square.png">
 
     <link href="https://fonts.googleapis.com/css?family=Chivo:900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
