--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <h3>
 <a id="reporting-issues" class="anchor" href="#reporting-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reporting issues</h3>
 
-<p>For the time being use the following links to view and report issues with WebVR implementations:</p>
+<p>For the time being, use the following links to view and report issues with WebVR implementations:</p>
 
 <ul>
 <li><a href="https://github.com/toji/chrome-webvr-issues/issues">Chrome Issues</a> (<a href="https://github.com/toji/chrome-webvr-issues/issues/new">file issue</a>)</li>
@@ -100,17 +100,16 @@
 </ul>
 
 <h3>
-<a id="misc-links" class="anchor" href="#misc-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Misc Links</h3>
+<a id="misc-links" class="anchor" href="#misc-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Misc. Links</h3>
 
 <ul>
 <li><a href="http://mozvr.com/">MozVR.com</a></li>
 <li><a href="http://mozvr.com/blog/">MozVR blog</a></li>
-<li><a href="http://blog.bitops.com/">Vlad's blog</a></li>
 <li><a href="http://blog.tojicode.com/">Brandon's blog</a></li>
 <li><a href="https://webvr.slack.com/">WebVR Slack</a> (<a href="https://webvr-slack.herokuapp.com/">sign up</a>)</li>
 </ul>
 
-<p><em>This page is a work in progress; more content coming soon.</em></p>
+<p><em>This page is a work in progress; more content is coming soon.</em></p>
         </section>
 
         <footer>
