polish a few more links, sentences

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 <h3>
 <a id="how-can-i-try-it" class="anchor" href="#how-can-i-try-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I try it?</h3>
 
-<p>The WebVR API is currently available in Firefox nightly builds with an Oculus Rift enabler installed, in experimental builds of Chrome, or in Samsung Internet for Gear VR. You can get the latest WebVR-enabled builds here:</p>
+<p>The WebVR API is currently available in <a href="https://nightly.mozilla.org/">Firefox Nightly builds</a>, in <a href="get-chrome/">experimental builds of Chromium</a>, and in the Samsung Internet Browser for Gear VR. You can get the latest WebVR-enabled builds here:</p>
 
 <ul>
 <li><a href="get-chrome/">Chrome</a></li>
 <li><a href="http://mozvr.com/#start">Firefox</a></li>
-<li><a href="http://developer.samsung.com/internet#gearvr-overview">Samsung Internet for Gear VR</a></li>
+<li><a href="http://developer.samsung.com/internet#gearvr-overview">Samsung Internet Browser for Gear VR</a></li>
 </ul>
 
-<p>Or, if you want to add WebVR to your mobile site today, you can use the WebVR Polyfill to provide support for Cardboard devices.</p>
+<p>Or, if you want to add WebVR to your mobile site today, you can use the <a href="https://github.com/borismus/webvr-polyfill">WebVR Polyfill</a> to provide support for Cardboard mobile devices.</p>
 
 <ul>
 <li><a href="https://github.com/borismus/webvr-polyfill">WebVR Polyfill</a></li>
@@ -68,12 +68,12 @@
 <h3>
 <a id="how-can-i-contribute" class="anchor" href="#how-can-i-contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I contribute?</h3>
 
-<p>The best place to contribute is the <a href="https://mail.mozilla.org/listinfo/web-vr-discuss">WebVR mailing list</a>. Developers of the Chrome, Firefox and Samsung Internet builds are on that list, as well as other community members that are enthusiastic about VR on the Web.</p>
+<p>The best place to contribute is the <a href="https://mail.mozilla.org/listinfo/web-vr-discuss">WebVR mailing list</a>. Developers of the Chrome, Firefox, and Samsung Internet Browser builds are on that list, as well as other community members who are enthusiastic about VR on the Web.</p>
 
 <h3>
 <a id="how-can-i-get-code" class="anchor" href="#how-can-i-get-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>How can I get the code?</h3>
 
-<p>The code that powers WebVR is available online, if you want to take a peek at what's going on under the hood:</p>
+<p>The code that powers WebVR is available online, if you want to take a peek under the hood:</p>
 
 <ul>
 <li><a href="https://chromium.googlesource.com/experimental/chromium/src/+/refs/wip/bajones/webvr_1">Chromium</a></li>
@@ -83,7 +83,7 @@
 <h3>
 <a id="reporting-issues" class="anchor" href="#reporting-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Reporting issues</h3>
 
-<p>For the time being use the following links to view and report issues with WebVR implementations:</p>
+<p>For the time being, use the following links to view and report issues with WebVR implementations:</p>
 
 <ul>
 <li><a href="https://github.com/toji/chrome-webvr-issues/issues">Chrome Issues</a> (<a href="https://github.com/toji/chrome-webvr-issues/issues/new">file issue</a>)</li>
@@ -93,7 +93,7 @@
 <h3>
 <a id="misc-links" class="anchor" href="#webvr-emulator" aria-hidden="true"><span class="octicon octicon-link"></span></a>WebVR Emulator</h3>
 
-<p>Jaume Sanchez Elias (<a href="https://twitter.com/thespite">@thespite</a>) has created a Chrome extension that allows developers to emulate a VR headset for testing the API when no hardware is available. Check it out!</p>
+<p>Jaume Sánchez Elias (<a href="https://twitter.com/thespite">@thespite</a>) has created a <a href="https://chrome.google.com/webstore/detail/webvr-api-emulation/gbdnpaebafagioggnhkacnaaahpiefil">Chrome extension</a> that allows developers to emulate a VR headset for testing the API without needing any VR hardware. Check it out!</p>
 <ul>
 <li><a href="https://chrome.google.com/webstore/detail/webvr-api-emulation/gbdnpaebafagioggnhkacnaaahpiefil">Chrome Extension</a></li>
 <li><a href="https://github.com/spite/WebVR-Extension">GitHub Repository</a></li>
