--- a/samples/index.html
+++ b/samples/index.html
@@ -12,6 +12,51 @@
 
     <link rel="stylesheet" href="../stylesheets/stylesheet.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
+
+    <style>
+      /*body {
+        font-family: sans-serif;
+        font-size: 0.9em;
+      }*/
+
+      h1 {
+        font-size: 1.3em;
+      }
+
+      h2 {
+        font-size: 1.0em;
+        margin-top: 2em;
+      }
+
+      .github-link {
+        font-size: 0.8em;
+      }
+
+      ul.sample-list {
+        list-style: none;
+        padding-left: 1em;
+        display: table;
+      }
+
+      ul.sample-list li {
+        display: table-row;
+        list-style: none;
+        padding-left: 0.5em;
+      }
+
+      ul.sample-list li::before {
+        display: table-cell;
+        content: attr(data-index) " - ";
+        font-weight: bold;
+        white-space: nowrap;
+      }
+
+      ul.sample-list a {
+        display: table-cell;
+        padding-right: 0.5em;
+      }
+    </style>
+
     <!--[if lt IE 9]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -25,9 +70,69 @@
       </header>
 
       <main class="main" id="main">
-        <div class="iframe-wrap iframe-wrap--samples">
-          <iframe class="iframe iframe--samples" src="https://toji.github.io/webvr-samples/" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <p>These sample pages demonstrate how to use various aspects of the WebVR API.</p>
+        <ul id="samples" class="sample-list"></ul>
+
+        <h2>Work-in-progress samples</h2>
+        <p>These samples are not yet complete and may not accurately portray the API's usage.</p>
+        <ul id="wip-samples" class="sample-list"></ul>
+
+        <br/>
+        <hr/>
+
+        <h3><a class="github-link" href="https://github.com/toji/webvr.info/blob/master/samples">View samples on GitHub</a></h3>
+
+        <script>
+          var pages = [
+            { index: "00", path: "00-hello-webvr.html", title: "Hello WebVR!" },
+            { index: "01", path: "01-vr-input.html", title: "VR Input" },
+            { index: "02", path: "02-stereo-rendering.html", title: "Stereo Rendering" },
+            { index: "03", path: "03-vr-presentation.html", title: "VR Presentation" },
+            { index: "04", path: "04-simple-mirroring.html", title: "Simple Mirroring" },
+            { index: "04b", path: "04b-simple-mirroring-2.html", title: "Simple Mirroring pt. 2" },
+            { index: "05", path: "05-room-scale.html", title: "Room Scale" },
+            { index: "06", path: "06-vr-audio.html", title: "VR Audio" },
+            { index: "07", path: "07-advanced-mirroring.html", title: "Advanced Mirroring" },
+            { index: "08", path: "08-dynamic-resolution.html", title: "Dynamic Resolution" },
+
+            // WIP samples, no index
+            { path: "XX-360-panorama.html", title: "360 Degree Panorama" },
+            { path: "XX-vr-controllers.html", title: "VR Controllers" }
+          ];
+
+          // Append an element for every item in the pages list.
+          var samples = document.getElementById("samples");
+          var wipSamples = document.getElementById("wip-samples");
+
+          for (var i = 0; i < pages.length; ++i) {
+            var page = pages[i];
+            var wipPage = !page.index;
+
+            var li = document.createElement("li");
+            li.setAttribute("data-index", wipPage ? "XX" : page.index);
+
+            var sampleLink = document.createElement("a");
+            sampleLink.href = page.path;
+            sampleLink.innerHTML = page.title;
+            li.appendChild(sampleLink);
+
+            var polyfillLink = document.createElement("a");
+            polyfillLink.href = page.path + "?polyfill=1";
+            polyfillLink.innerHTML = "(Use Polyfill)";
+            li.appendChild(polyfillLink);
+
+            var sourceLink = document.createElement("a");
+            sourceLink.href = "https://github.com/toji/webvr.info/blob/master/samples/" + page.path;
+            sourceLink.innerHTML = "(Source)";
+            li.appendChild(sourceLink);
+
+            if (wipPage) {
+              wipSamples.appendChild(li);
+            } else {
+              samples.appendChild(li);
+            }
+          }
+        </script>
       </main>
 
       <footer class="footer">
