--- a/samples/07-advanced-mirroring.html
+++ b/samples/07-advanced-mirroring.html
@@ -218,6 +218,15 @@ found in the LICENSE file.
         }
       }
 
+      function onClick () {
+        // Reset the background color to a random value
+        gl.clearColor(
+            Math.random() * 0.5,
+            Math.random() * 0.5,
+            Math.random() * 0.5, 1.0);
+      }
+      webglCanvas.addEventListener("click", onClick, false);
+
       function getStandingViewMatrix (out, view) {
         if (vrDisplay.stageParameters) {
           mat4.invert(out, vrDisplay.stageParameters.sittingToStandingTransform);
