--- a/samples/05-room-scale.html
+++ b/samples/05-room-scale.html
@@ -226,6 +226,15 @@ found in the LICENSE file.
         }
       }
 
+      function onClick () {
+        // Reset the background color to a random value
+        gl.clearColor(
+            Math.random() * 0.5,
+            Math.random() * 0.5,
+            Math.random() * 0.5, 1.0);
+      }
+      webglCanvas.addEventListener("click", onClick, false);
+
       // Get a matrix for the pose that takes into account the stageParameters
       // if we have them, and otherwise adjusts the position to ensure we're
       // not stuck in the floor.
