Added Chrome origin trial header to all samples

--- a/samples/XX-vr-controllers.html
+++ b/samples/XX-vr-controllers.html
@@ -11,6 +11,9 @@ found in the LICENSE file.
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
+    <!--Chrome origin trial header-->
+    <meta http-equiv="origin-trial" content="AmsYsWL751NCxAz0diFlXTfTlIi8umTOfnJZtYNN/Sl+HSXqUwFvbxPTaEvWZY1W4pvzCnI22w88tqd+3quLSgoAAABOeyJvcmlnaW4iOiAiaHR0cHM6Ly93ZWJ2ci5pbmZvOjQ0MyIsICJmZWF0dXJlIjogIldlYlZSIiwgImV4cGlyeSI6IDE0ODE5MDc2NTN9">
+
     <title>XX - VR Controllers</title>
 
     <!--
