--- a/samples/01-vr-input.html
+++ b/samples/01-vr-input.html
@@ -11,6 +11,9 @@ found in the LICENSE file.
     <meta name="mobile-web-app-capable" content="yes"> <!-- Launch fullscreen when added to home screen -->
     <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen Landscape on iOS -->
 
+    <!--Chrome origin trial header-->
+    <meta http-equiv="origin-trial" content="AmsYsWL751NCxAz0diFlXTfTlIi8umTOfnJZtYNN/Sl+HSXqUwFvbxPTaEvWZY1W4pvzCnI22w88tqd+3quLSgoAAABOeyJvcmlnaW4iOiAiaHR0cHM6Ly93ZWJ2ci5pbmZvOjQ0MyIsICJmZWF0dXJlIjogIldlYlZSIiwgImV4cGlyeSI6IDE0ODE5MDc2NTN9">
+
     <title>01 - VR Input</title>
 
     <!--
