--- a/samples/02-stereo-rendering.html
+++ b/samples/02-stereo-rendering.html
@@ -10,6 +10,9 @@ found in the LICENSE file.
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen Landscape on iOS -->
 
+    <!--Chrome origin trial header-->
+    <meta http-equiv="origin-trial" content="AmsYsWL751NCxAz0diFlXTfTlIi8umTOfnJZtYNN/Sl+HSXqUwFvbxPTaEvWZY1W4pvzCnI22w88tqd+3quLSgoAAABOeyJvcmlnaW4iOiAiaHR0cHM6Ly93ZWJ2ci5pbmZvOjQ0MyIsICJmZWF0dXJlIjogIldlYlZSIiwgImV4cGlyeSI6IDE0ODE5MDc2NTN9">
+
     <title>02 - Stereo Rendering</title>
 
     <!--
