--- a/samples/canvas-attributes.html
+++ b/samples/canvas-attributes.html
@@ -136,7 +136,7 @@ found in the LICENSE file.
 
               mat4.perspective(projectionMat, Math.PI*0.4, webglCanvas.width / webglCanvas.height, 0.1, 1024.0);
               cubeSea.render(projectionMat, frameData.leftViewMatrix, stats);
-              stats.renderOrtho();
+              stats.renderOrtho(10, 10, webglCanvas.height - 20, webglCanvas.height - 20);
             }
           } else {
             window.requestAnimationFrame(onAnimationFrame);
@@ -147,7 +147,7 @@ found in the LICENSE file.
             mat4.identity(viewMat);
             cubeSea.render(projectionMat, viewMat, stats);
 
-            stats.renderOrtho();
+            stats.renderOrtho(10, 10, webglCanvas.height - 20, webglCanvas.height - 20);
           }
 
           stats.end();
@@ -167,28 +167,6 @@ found in the LICENSE file.
             // WebVR produces have a well scaled depth buffer.
             vrDisplay.depthNear = 0.1;
             vrDisplay.depthFar = 1024.0;
-
-            VRSamplesUtil.addButton("Reset Pose", "R", null, function () { vrDisplay.resetPose(); });
-
-            // Generally, you want to wait until VR support is confirmed and
-            // you know the user has a VRDisplay capable of presenting connected
-            // before adding UI that advertises VR features.
-            if (vrDisplay.capabilities.canPresent)
-              vrPresentButton = VRSamplesUtil.addButton("Enter VR", "E", "media/icons/cardboard64.png", onVRRequestPresent);
-
-            // The UA may kick us out of VR present mode for any reason, so to
-            // ensure we always know when we begin/end presenting we need to
-            // listen for vrdisplaypresentchange events.
-            window.addEventListener('vrdisplaypresentchange', onVRPresentChange, false);
-
-            // These events fire when the user agent has had some indication that
-            // it would be appropariate to enter or exit VR presentation mode, such
-            // as the user putting on a headset and triggering a proximity sensor.
-            // You can inspect the `reason` property of the event to learn why the
-            // event was fired, but in this case we're going to always trust the
-            // event and enter or exit VR presentation mode when asked.
-            window.addEventListener('vrdisplayactivate', onVRRequestPresent, false);
-            window.addEventListener('vrdisplaydeactivate', onVRExitPresent, false);
           } else {
             VRSamplesUtil.addInfo("WebVR supported, but no VRDisplays found.", 3000);
           }
