--- a/samples/test-canvas-attributes.html
+++ b/samples/test-canvas-attributes.html
@@ -181,6 +181,7 @@ found in the LICENSE file.
       appendCanvas("Alpha False", { alpha: false });
       appendCanvas("Depth False", { depth: false });
       appendCanvas("Stencil True", { stencil: true });
+      appendCanvas("Antialias False", { antialias: false });
       appendCanvas("Premultiplied Alpha False", { premultipliedAlpha: false });
       appendCanvas("Preserve Drawing Buffer False", { preserveDrawingBuffer: true });
 
